# Van

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_SUMMARY.md  SECURITY.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py
api/rest/routes/: __init__.py  agents.py  sessions.py  tools.py
cli/: __init__.py
cli/commands/: __init__.py  repl.py  slash.py
cli/formatter/: __init__.py  output.py
config/: default.yaml
copaw/: __init__.py  cli.py
core/: __init__.py  config.py
core/agent/: __init__.py  coordinator.py  main_agent.py  registry.py
core/agent/sub_agents/: __init__.py  base.py  batch.py  explore.py  plan.py  review.py  security.py  verify.py
core/llm/: __init__.py  adapter.py  anthropic.py  base.py  openai.py
core/memory/: __init__.py  context.py  long_term.py  session.py
core/prompt/: builder.py  loader.py  token_budget.py
core/prompt/templates/agents/: explore.yaml  main.yaml  plan.yaml  verify.yaml
core/prompt/templates/memory/: longterm.yaml  session.yaml
core/prompt/templates/system/: base.yaml
core/prompt/templates/tools/: browser.yaml  file.yaml  network.yaml  shell.yaml
docs/: ci-workflow-template.yml  index.md  ops-guide.md  release-checklist.md  security.md
scripts/: release.sh
security/: __init__.py
security/monitor/: __init__.py  security_monitor.py
security/permission/: __init__.py  manager.py
security/sandbox/: __init__.py  isolator.py
storage/: __init__.py  database.py  models.py
tests/benchmarks/: test_performance.py
tests/unit/: test_agent.py  test_api.py  test_cli.py  test_coordinator.py  test_copaw_cli.py  test_formatter.py  test_llm.py  test_memory.py  test_registry.py  test_repl.py  test_security.py  test_security_agent.py  test_storage.py  test_sub_agents.py  test_tools.py
tools/: __init__.py  base.py
tools/browser/: __init__.py  browser.py
tools/file/: __init__.py  editor.py  globber.py  reader.py  searcher.py  writer.py
tools/shell/: __init__.py  executor.py
