[build-system]
requires = ["setuptools>=68", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "copaw-code"
version = "0.1.0"
description = "CoPaw Code - An AI coding assistant system similar to Claude Code"
readme = "README.md"
license = "MIT"
authors = [{ name = "CoPaw Team", email = "team@copaw.dev" }]
keywords = ["ai", "coding", "assistant", "llm", "claude", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.109.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.28.0",
    "redis>=4.5.0",
    "click>=8.0.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
    "tiktoken>=0.5.0",
    "PyYAML>=6.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
copaw-code = "copaw.entrypoint:cli"

[project.urls]
Homepage = "https://github.com/copaw-team/copaw-code"
Documentation = "https://github.com/copaw-team/copaw-code#readme"
Repository = "https://github.com/copaw-team/copaw-code.git"
Issues = "https://github.com/copaw-team/copaw-code/issues"

[tool.setuptools.packages.find]
include = ["copaw*", "core*", "tools*", "security*", "storage*", "cli*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
